--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -2,9 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - apps-collab.yaml
+  - apps-home.yaml
   - apps-media.yaml
   - apps-security.yaml
-  - apps-home.yaml
   - core-cert-manager.yaml
   - core-certificates.yaml
   - core-chrony.yaml
