--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - core-cilium.yaml
   - core-error-pages.yaml
   - core-metrics-server.yaml
+  - core-monitoring.yaml
   - core-nfd.yaml
   - core-rbac.yaml
   - core-rook-ceph.yaml
