--- a/k8s/clusters/cluster-0/manifests/core/monitoring/vector/aggregator/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/monitoring/vector/aggregator/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
               port:
                 name: "vector"
       tls:
-        - secretName: vector-${CLUSTER_NAME}-tls
+        - secretName: tls.vector
           hosts:
             - "vector.${SECRET_DOMAIN}"
 
