--- a/k8s/clusters/cluster-0/manifests/core/monitoring/loki/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/monitoring/loki/helm-release.yaml
@@ -46,26 +46,26 @@ spec:
         # You can use a headless k8s service for all distributor,
         # ingester and querier components.
         join_members:
-        # - loki-gossip-ring.logs.svc.cluster.local:7946
-        - loki-headless.logs.svc.cluster.local:7946
+          # - loki-gossip-ring.logs.svc.cluster.local:7946
+          - loki-headless.logs.svc.cluster.local:7946
         max_join_backoff: 1m
         max_join_retries: 10
         min_join_backoff: 1s
       schema_config:
         configs:
-        - from: "2020-10-24"
-          store: boltdb-shipper
-          object_store: s3
-          schema: v11
-          index:
-            prefix: index_
-            period: 24h
+          - from: "2020-10-24"
+            store: boltdb-shipper
+            object_store: s3
+            schema: v11
+            index:
+              prefix: index_
+              period: 24h
       storage_config:
         aws:
           s3forcepathstyle: true
           insecure: true
-      #     s3: "s3://${SECRET_LOKI_S3_ACCESS_KEY}:${SECRET_LOKI_S3_SECRET_KEY}@rook-ceph-rgw-object-store.rook-ceph.svc:80/loki"
-      #     s3forcepathstyle: true
+        #     s3: "s3://${SECRET_LOKI_S3_ACCESS_KEY}:${SECRET_LOKI_S3_SECRET_KEY}@rook-ceph-rgw-object-store.rook-ceph.svc:80/loki"
+        #     s3forcepathstyle: true
         boltdb_shipper:
           active_index_directory: /data/loki/index
           cache_location: /data/loki/index_cache
@@ -76,10 +76,10 @@ spec:
         reject_old_samples: true
         reject_old_samples_max_age: 168h
     extraPorts:
-    - port: 7956
-      protocol: TCP
-      name: loki-gossip-ring
-      targetPort: 7946
+      - port: 7956
+        protocol: TCP
+        name: loki-gossip-ring
+        targetPort: 7946
     serviceMonitor:
       enabled: true
     podAnnotations:
@@ -92,28 +92,28 @@ spec:
     affinity:
       podAntiAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
-        - labelSelector:
-            matchExpressions:
-            - key: app
-              operator: In
-              values:
-              - loki
-          topologyKey: "kubernetes.io/hostname"
+          - labelSelector:
+              matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                    - loki
+            topologyKey: "kubernetes.io/hostname"
 
   valuesFrom:
-  - kind: ConfigMap
-    name: loki-ceph-bucket
-    valuesKey: BUCKET_NAME
-    targetPath: loki.config.storage_config.aws.bucketnames
-  - kind: ConfigMap
-    name: loki-ceph-bucket
-    valuesKey: BUCKET_HOST
-    targetPath: loki.config.storage_config.aws.endpoint
-  - kind: Secret
-    name: loki-ceph-bucket
-    valuesKey: AWS_ACCESS_KEY_ID
-    targetPath: loki.config.storage_config.aws.access_key_id
-  - kind: Secret
-    name: loki-ceph-bucket
-    valuesKey: AWS_SECRET_ACCESS_KEY
-    targetPath: loki.config.storage_config.aws.secret_access_key
+    - kind: ConfigMap
+      name: loki-ceph-bucket
+      valuesKey: BUCKET_NAME
+      targetPath: config.storage_config.aws.bucketnames
+    - kind: ConfigMap
+      name: loki-ceph-bucket
+      valuesKey: BUCKET_HOST
+      targetPath: config.storage_config.aws.endpoint
+    - kind: Secret
+      name: loki-ceph-bucket
+      valuesKey: AWS_ACCESS_KEY_ID
+      targetPath: config.storage_config.aws.access_key_id
+    - kind: Secret
+      name: loki-ceph-bucket
+      valuesKey: AWS_SECRET_ACCESS_KEY
+      targetPath: config.storage_config.aws.secret_access_key
