add vector charts

--- a/k8s/clusters/cluster-0/flux/repositories/helm/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/repositories/helm/kustomization.yaml
@@ -42,6 +42,7 @@ resources:
   - pomerium-charts.yaml
   - rook-ceph-charts.yaml
   - timberio-charts.yaml
+  - vector-charts.yaml
   - vernemq-charts.yaml
   - weaveworks-kured-charts.yaml
   - yourls-charts.yaml
