--- a/k8s/clusters/cluster-0/flux/orchestration/core-monitoring.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-monitoring.yaml
@@ -62,3 +62,26 @@ spec:
     provider: sops
     secretRef:
       name: sops-gpg
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: core-monitoring-vector-agent
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-namespaces
+    - name: rook-ceph-cluster
+    - name: core-monitoring-loki
+    - name: core-monitoring-vector-aggregator
+  interval: 5m
+  path: "./k8s/clusters/cluster-0/manifests/core/monitoring/vector/agent"
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: k8s-gitops
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
