dns was wrong for vector aggregator

--- a/k8s/clusters/cluster-0/manifests/core/monitoring/vector/agent/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/monitoring/vector/agent/helm-release.yaml
@@ -46,5 +46,5 @@ spec:
           type: vector
           inputs:
             - kubernetes_logs
-          address: "vector-aggregator.system-monitoring:6000"
+          address: "vector-aggregator.monitoring:6000"
           version: "2"
