--- a/k8s/clusters/cluster-0/manifests/core/monitoring/grafana/config-pvc.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/monitoring/grafana/config-pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-config-pvc
-  namespace: collab
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteOnce
