--- a/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
@@ -37,6 +37,7 @@ data:
   SVC_BLOCKY_ADDRESS: "10.45.10.13"
   SVC_INFLUXDB_ADDRESS: "10.45.10.15"
   SVC_LOKI_ADDRESS: "10.45.10.16"
+  SVC_VECTOR_AGGREGATOR: "10.45.10.16"
   SVC_RESILIO_SYNC_ADDRESS: "10.45.10.18"
   SVC_COREDNS_ADDRESS_EXTERNAL: "10.45.10.53"
   SVC_COREDNS_ADDRESS_INTERNAL: "10.43.10.53"
