deploy matrix media repo

--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-media-repo/matrix-media-ceph-object-bucket.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-media-repo/matrix-media-ceph-object-bucket.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: comms
 spec:
   bucketName: matrix-media
-  storageClassName: rook-ceph-bucket
+  storageClassName: ceph-bucket
