--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-media-repo/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-media-repo/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - matrix-media-ceph-object-bucket.yaml
   - matrix-media-repo-postgresql-pvc.yaml
   - helm-release.yaml
