--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-synapse/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-synapse/helm-release.yaml
@@ -95,7 +95,7 @@ spec:
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       tls:
-        - secretName: matrix-cert
+        - secretName: tls.matrix
           hosts:
             - ${SECRET_PUBLIC_DOMAIN}
             - matrix.${SECRET_DOMAIN}
