--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-synapse-admin/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-synapse-admin/helm-release.yaml
@@ -8,10 +8,10 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: /charts/kah-common/
+      chart: /k8s/charts/kah-common/
       sourceRef:
         kind: GitRepository
-        name: flux-system
+        name: k8s-gitops
         namespace: flux-system
       interval: 5m
   dependsOn:
@@ -42,7 +42,7 @@ spec:
               - path: /
                 pathType: Prefix
         tls:
-          - secretName: matrix-admin-cert
+          - secretName: tls.matrix-admin
             hosts:
               - "matrix-admin.${SECRET_DOMAIN}"
 
