--- a/k8s/clusters/cluster-0/manifests/apps/comms/mautrix-facebook/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/mautrix-facebook/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: /k8s/charts/kah-common/
+      chart: /k8s/charts/kah-common-chart/
       sourceRef:
         kind: GitRepository
         name: k8s-gitops
