--- a/k8s/clusters/cluster-0/flux/orchestration/apps-comms.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-comms.yaml
@@ -69,7 +69,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps-comms-mautrix-slack
+  name: apps-comms-matrix-slack
   namespace: flux-system
 spec:
   dependsOn:
@@ -77,7 +77,7 @@ spec:
     - name: rook-ceph-cluster
     - name: core-traefik
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/comms/mautrix-slack"
+  path: "./k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack"
   prune: true
   wait: true
   sourceRef:
