--- a/k8s/clusters/cluster-0/manifests/apps/network/omada/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/network/omada/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
         tls:
           - hosts:
               - "omada.${SECRET_DOMAIN}"
-            secretName: omada-cert
+            secretName: tls.omada
 
     service:
       main:
