--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - apps-collab.yaml
   - apps-comms.yaml
+  - apps-network.yaml
   - apps-home.yaml
   - apps-media.yaml
   - apps-security.yaml
