--- a/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-network.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: apps-network-omada
+  namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-namespaces
