change omada cert secret name

--- a/k8s/clusters/cluster-0/manifests/apps/network/omada/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/network/omada/helm-release.yaml
@@ -138,7 +138,7 @@ spec:
         type: custom
         volumeSpec:
           secret:
-            secretName: omada-cert
+            secretName: tls.omada
 
     nodeSelector:
       node-role.kubernetes.io/worker: "true"
