update load balancer IP for omada

--- a/k8s/clusters/cluster-0/manifests/apps/network/omada/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/network/omada/helm-release.yaml
@@ -59,8 +59,7 @@ spec:
       controller:
         enabled: true
         type: LoadBalancer
-        externalIPs:
-          - "${SVC_OMADA_ADDRESS}"
+        loadBalancerIP: "${SVC_OMADA_ADDRESS}"
         externalTrafficPolicy: Local
         ports:
           mgmt-8088-tcp:
