deploy unifi data pvc

--- a/k8s/clusters/cluster-0/manifests/apps/network/unifi/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/network/unifi/helm-release.yaml
@@ -60,7 +60,7 @@ spec:
     persistence:
       data:
         enabled: true
-        existingClaim: unifi-pvc
+        existingClaim: unifi-data-pvc
 
     resources:
       requests:
