enable kasten namespace

--- a/k8s/clusters/cluster-0/manifests/core/namespaces/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/namespaces/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ext-gateway.yaml
   - flux-system.yaml
   - home.yaml
+  - kasten-io.yaml
   - kube-system.yaml
   - logs.yaml
   - mail.yaml
