fix radarr cert name

--- a/k8s/clusters/cluster-0/manifests/apps/media/radarr/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/radarr/helm-release.yaml
@@ -41,7 +41,7 @@ spec:
         tls:
           - hosts:
               - "radarr.${SECRET_DOMAIN}"
-            secretName: radarr-cert
+            secretName: tls.radarr
       api:
         enabled: true
         ingressClassName: "traefik"
