deploy kasten-io

--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - core-chrony.yaml
   - core-cilium.yaml
   - core-error-pages.yaml
+  - core-kasten-io.yaml
   - core-metrics-server.yaml
   - core-monitoring.yaml
   - core-nfd.yaml
