wrong ingress class for k10

--- a/k8s/clusters/cluster-0/manifests/core/kasten-io/k10/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kasten-io/k10/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
     clusterName: k8s
     ingress:
       create: true
-      class: nginx
+      class: traefik
       host: "k10.${SECRET_DOMAIN}"
       urlPath: k10
       hosts:
