--- a/k8s/clusters/cluster-0/flux/orchestration/core-rook-ceph.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-rook-ceph.yaml
@@ -67,7 +67,7 @@ spec:
   wait: true
   sourceRef:
     kind: GitRepository
-    name: home-ops
+    name: k8s-gitops
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
@@ -87,4 +87,4 @@ spec:
   wait: true
   sourceRef:
     kind: GitRepository
-    name: home-ops
+    name: k8s-gitops
