--- a/k8s/clusters/cluster-0/manifests/core/kasten-io/k10/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kasten-io/k10/helm-release.yaml
@@ -32,6 +32,12 @@ spec:
       create: true
       class: traefik
       host: "k10.${SECRET_DOMAIN}"
+      annotations:
+        kubernetes.io/tls-acme: "true"
+        cert-manager.io/cluster-issuer: letsencrypt-production
+        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        external-dns/is-public: "true"
+        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
       urlPath: k10
       hosts:
         - "k10.${SECRET_DOMAIN}"
