--- a/k8s/clusters/cluster-0/manifests/core/kasten-io/k10/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/kasten-io/k10/helm-release.yaml
@@ -20,13 +20,16 @@ spec:
     eula:
       accept: true
       company: carpenike
-      email: carpenike@@users.noreply.github.com
+      email: ryan@ryanholt.net
     global:
       persistence:
         storageClass: ceph-block
     auth:
-      tokenAuth:
+      k10AdminUsers:
+      - ryan@ryanholt.net
+      oidcAuth:
         enabled: true
+        secretName: kasten-secret
     clusterName: k8s
     ingress:
       create: true
