--- a/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
@@ -9,6 +9,8 @@ stringData:
   SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:onNAvK0NuRnwcA==,iv:qukLHdqZN5AJP4HJ5s0N+G2zwdFsUklJiGwv640SkzA=,tag:QkXCXdMpLXnYeqrAZKB14A==,type:str]
   SECRET_MINIO_VELERO_ACCESS_KEY: ENC[AES256_GCM,data:GGELDwtn,iv:XPIMezFdGv1xmLmM/W7LjzZxYFm1CDQ7Ms1zxUh8hrI=,tag:u6TOZxlu4PwiKhrUBGZp3g==,type:str]
   SECRET_MINIO_VELERO_SECRET_KEY: ENC[AES256_GCM,data:YhMY2EgwWus3zNsuZQ7TLifHEdfnMd+RUYA22OjVcJGTrEY+EDNJYmnGMIAfEmC2,iv:Elc0TTar9MadAIb5Yau5qmyzlB4JeZHtrAx7yekM0uY=,tag:lHVE3PN9QDJ+4HXf4dYylQ==,type:str]
+  SECRET_MINIO_K10_ACCESS_KEY: ENC[AES256_GCM,data:DD+w,iv:IMUuKQfTX972BLzj2XLvw1xENn7ImtCiHqIS9HeKWos=,tag:66RIB9N3fG/9A7/Ox3GThQ==,type:str]
+  SECRET_MINIO_K10_SECRET_KEY: ENC[AES256_GCM,data:3A/L0nR2qzUd5mES0d+SQnOmfO4+iuYVKHW0xzv0cit+4T5Kbq1p62HpOKERDzEc,iv:mXZTdhPeyrul3GmORZRDjpRcjU1V7hJL2GLuef9jTFw=,tag:quQ7kLsuCl9kJwQ2J0wDbQ==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PSPtzb1eIzUnRtoAumI=,iv:HaJPQ/o4SM4g9a9HZ9fLhv8Ypj55IRrsiprU+SMH7II=,tag:EOGk2vx3BV4bn+tnaqJR6A==,type:str]
@@ -93,8 +95,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2022-01-05T19:28:20Z"
-  mac: ENC[AES256_GCM,data:eGEEvDnFaEIqgwmRaX2xz+ZwO7+VaeYQuHTymPN8vU22l4Den9tQJR1tZOBaDo6/l3dFHplvbg5S5Utw9imZ4aK9s2Go7nV5coNPE/+8x8weDpgO3dSaigPOUx1HWBEiq16jXllLhxcygxYRKcM65CQhgRx2bw+ST1gA14bKmnM=,iv:XvQqILk8djKCsBAwM5zANeKVzeJC+n3kebQFypkkVOQ=,tag:+7lrX0w/AeGsE8FMUE9Fiw==,type:str]
+  lastmodified: "2022-01-21T19:09:34Z"
+  mac: ENC[AES256_GCM,data:THb5BctU4rb/efcnhP+oA859uRqZgEk64evS8azDx/MWv6024GkogExB0d9h22swuIBWJXjOuYrkIDUut9c58jDk8ECKFtcLef2G2B4NUosuncQyDXuwGHybX3o0R53e4Mw5st3ISGf8C1n5Pbw71SeFbwqrsrhnRUSeNc1Es3w=,iv:hvAP2vyA4VNAU3aY4JVqEps6+XmPE1/4IS6ytS5hIVs=,tag:XRXP3jM6IGeyzPiIZ+R/pg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
