--- a/k8s/clusters/cluster-0/flux/orchestration/core-rook-ceph.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/core-rook-ceph.yaml
@@ -57,8 +57,8 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-crds-external-snapshotter
-    - name: rook-ceph-namespace
+    - name: cluster-namespaces
+    - name: cluster-crds
     - name: rook-ceph-operator
     - name: rook-ceph-cluster
   interval: 5m
@@ -76,8 +76,8 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-crds-external-snapshotter
-    - name: rook-ceph-namespace
+    - name: cluster-namespaces
+    - name: cluster-crds
     - name: rook-ceph-operator
     - name: rook-ceph-cluster
     - name: rook-ceph-snapshot-controller-base
