add k10 recovery secrets to cluster

--- a/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-secrets.sops.yaml
@@ -11,6 +11,8 @@ stringData:
   SECRET_MINIO_VELERO_SECRET_KEY: ENC[AES256_GCM,data:YhMY2EgwWus3zNsuZQ7TLifHEdfnMd+RUYA22OjVcJGTrEY+EDNJYmnGMIAfEmC2,iv:Elc0TTar9MadAIb5Yau5qmyzlB4JeZHtrAx7yekM0uY=,tag:lHVE3PN9QDJ+4HXf4dYylQ==,type:str]
   SECRET_MINIO_K10_ACCESS_KEY: ENC[AES256_GCM,data:DD+w,iv:IMUuKQfTX972BLzj2XLvw1xENn7ImtCiHqIS9HeKWos=,tag:66RIB9N3fG/9A7/Ox3GThQ==,type:str]
   SECRET_MINIO_K10_SECRET_KEY: ENC[AES256_GCM,data:3A/L0nR2qzUd5mES0d+SQnOmfO4+iuYVKHW0xzv0cit+4T5Kbq1p62HpOKERDzEc,iv:mXZTdhPeyrul3GmORZRDjpRcjU1V7hJL2GLuef9jTFw=,tag:quQ7kLsuCl9kJwQ2J0wDbQ==,type:str]
+  SECRET_K10_DR_KEY: ENC[AES256_GCM,data:G75QT7JyrARh6AZvrsQPPG4BJVAHHTxl,iv:hkxrDxilCUn5u7rhZQ8prpG9cNSSphrfQvVbzM3hOto=,tag:MC58yTaRxo/J6GQhPN+4wQ==,type:str]
+  SECRET_K10_DR_CLUSTER_ID: ENC[AES256_GCM,data:t78IozTOQ0/veelIVexmOvWVjOgPP1KOZn4fcKJ6YnLj/iJb,iv:ZkTScbzOkF4u4OSlUHVMONCoJ9AFmDJeDCuKpHrDlMk=,tag:0UvihHUJMRrOeFg4sfq40A==,type:str]
   SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:GhlAUKKQZi8PVzfH7+NCNrrtgco9redOBVWqt32WeaojRthq0FV1KjwbR+9L8NgsYIIHws9cEPkeXzcYiMW2CbyzYM37tLSJhQ/4Mt7zrK4tfGOn65ak3XxdzVR0f5dO4N7utld6mtCE+UqkMJovDWaI5D0Yo3Bx0P0uodqn,iv:g/hYI+iXdsJkdfbZpAFmfE2WVHZv238kIlAAOp5euNI=,tag:6Hw2V0gaEa1rauqC26T44A==,type:str]
   SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:KDDYtNQc6WrUe/3ZoCRab89nPIcqdWw0EcApQRzh9ER5KXXF7gQhXzCJuVmvLoF+,iv:KWDPQjNg3wc2QiUJafTHwVikwxOjcSHGSkBXkM1Niu0=,tag:3Wy8FBNda2LdyfiFXCcbaw==,type:str]
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:PSPtzb1eIzUnRtoAumI=,iv:HaJPQ/o4SM4g9a9HZ9fLhv8Ypj55IRrsiprU+SMH7II=,tag:EOGk2vx3BV4bn+tnaqJR6A==,type:str]
@@ -95,8 +97,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2022-01-21T19:09:34Z"
-  mac: ENC[AES256_GCM,data:THb5BctU4rb/efcnhP+oA859uRqZgEk64evS8azDx/MWv6024GkogExB0d9h22swuIBWJXjOuYrkIDUut9c58jDk8ECKFtcLef2G2B4NUosuncQyDXuwGHybX3o0R53e4Mw5st3ISGf8C1n5Pbw71SeFbwqrsrhnRUSeNc1Es3w=,iv:hvAP2vyA4VNAU3aY4JVqEps6+XmPE1/4IS6ytS5hIVs=,tag:XRXP3jM6IGeyzPiIZ+R/pg==,type:str]
+  lastmodified: "2022-01-21T19:39:09Z"
+  mac: ENC[AES256_GCM,data:lRYv4QtVJN4ILWZ55a8jajHNHPAgOdm/B1i/jqHzITLpOvbovcASBPQL85w0jKNPtceeeV55YLVHvUhq+Zv+qqoY7TeI1d0LNEIbQucX9cYpitomL678cPkLlRobY7zBXwohB8phuPsNk5QmgjQPmvy9wS22pVhoA2iZkr0tpXg=,iv:HRzO/H3Z6BgBFDAUHfTLGivsa04O9+pq4ejbj7TfPjo=,tag:s3803WhXZ0gtMTndUfmxrg==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
