--- a/k8s/clusters/cluster-0/manifests/apps/media/nzbhydra/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/nzbhydra/helm-release.yaml
@@ -46,11 +46,11 @@ spec:
         tls:
         - hosts:
           - "nzbhydra.${SECRET_DOMAIN}"
-          secretName: nzbhydra-cert
+          secretName: tls.nzbhydra
     persistence:
       config:
         enabled: true
-        existingClaim: nzbhydra2-pvc
+        existingClaim: nzbhydra2-config-pvc
     resources:
       requests:
         memory: 250Mi
