--- a/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - apps-home.yaml
   - apps-media.yaml
   - apps-security.yaml
+  - apps-vpn-gateway.yaml
   - core-cert-manager.yaml
   - core-certificates.yaml
   - core-chrony.yaml
