--- a/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
+++ b/k8s/clusters/cluster-0/flux/vars/cluster-config.yaml
@@ -16,6 +16,7 @@ data:
   NETWORK_BGP_SVC_CIDR: 10.45.0.0/16
   NETWORK_K8S_POD_CIDR: "10.42.0.0/16"
   NETWORK_K8S_SERVICE_CIDR: "10.43.0.0/16"
+  NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
   NETWORK_MANAGEMENT_CIDR: "10.20.0.0/16"
 
   # Loadbalancer IP's
