--- a/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/helm-release.yaml
@@ -56,8 +56,12 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
           - host: "qb.${SECRET_DOMAIN}"
             paths:
