fix cert for bazarr

--- a/k8s/clusters/cluster-0/manifests/apps/media/bazarr/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/bazarr/helm-release.yaml
@@ -42,6 +42,7 @@ spec:
         tls:
           - hosts:
               - "bazarr.${SECRET_DOMAIN}"
+            secretName: tls.bazarr
     persistence:
       config:
         enabled: true
