--- a/k8s/clusters/cluster-0/manifests/apps/media/calibre/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/calibre/helm-release.yaml
@@ -29,10 +29,15 @@ spec:
       config:
         enabled: true
         existingClaim: calibre-config-pvc
-      data:
+      nfs-nas-media:
         enabled: true
-        existingClaim: media-nfs-tank-share-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: "nas.${SECRET_DOMAIN}"
+            path: /mnt/tank/share
         mountPath: /data
+
 
     service:
       webserver:
